@@ -27,6 +27,8 @@ Revision history for Log::Log4perl
       (debugging won't work because of "eval"s). Both files define a 
       constant named DEBUG towards the top of the file, which will
       have perl optimize away the debug statements in case it's set to 0.
+    * A warning is issued now (once) if init() hasn't been called or
+      no appenders have been defined.
 
 0.20 7/23/2002
     * Strip trailing spaces in config file
